# fireflies_game

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: color.h  hash.h
core/src/: color.cpp
x11_helpers/: CMakeLists.txt
x11_helpers/include/x11_helpers/: colors.h  x11_context.h  x11_context.hpp
x11_helpers/src/: x11_context.cpp
